# site

./: .envrc  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  Cargo.toml  GIT_CONVENTION.md  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: errors.yml
backend/: .env.example  .gitignore  Cargo.toml  README.md  openapi.json
backend/migrations/: 0001_init.sql
backend/src/: config.rs  error_reporter.rs  lib.rs  main.rs
backend/src/api/: error.rs  mod.rs  openapi.rs  router.rs  state.rs
backend/src/api/dto/: blog.rs
backend/src/api/handler/: blog.rs  health.rs  mod.rs
backend/src/application/: blog_service.rs  ledger_service.rs  mod.rs
backend/src/domain/: error.rs  mod.rs
backend/src/domain/model/: blog.rs
backend/src/domain/port/: blog_repository.rs  ledger.rs  mod.rs
backend/src/infrastructure/: db.rs  mod.rs
backend/src/infrastructure/persistence/: mod.rs  postgres_blog_repository.rs
backend/src/infrastructure/tigerbeetle/: mod.rs  tigerbeetle_ledger.rs
cabinet/: Cargo.toml  Dioxus.toml  README.md  input.css
cabinet/application/: router.rs
cabinet/assets/: tailwind.css
cabinet/entities/: mod.rs
cabinet/features/: mod.rs
cabinet/features/error_monitoring/: boot.rs  capture.rs  mod.rs
cabinet/shared/ui/: button.rs  mod.rs
cabinet/src/: lib.rs  main.rs
cabinet/src/application/: mod.rs  router.rs
cabinet/src/features/: mod.rs
cabinet/src/shared/lib/: utils.rs
cabinet/src/shared/ui/: badge.rs  separator.rs
cabinet/views/: clients.rs
crm/: Cargo.toml  Dioxus.toml
crm/assets/: main.css
crm/src/: lib.rs  main.rs
crm/src/application/: layout.rs  router.rs
crm/src/views/: clients.rs  dashboard.rs  investments.rs  not_found.rs
docs/: ARCHITECTURE.md  banking.excalidraw  element_priority.excalidraw  site_outline.excalidraw  tailwind_breakpoints_principles.md  whiteboard.excalidraw
docs/.readme_assets/: description.md  other.md  usage.md
docs/page_sketches/: README.md  data:real_estate.excalidraw
domain/: Cargo.toml
domain/src/: error.rs  lib.rs
domain/src/model/: blog.rs  ledger.rs  mod.rs
ev_site/: Cargo.toml
ev_site/src/: config.rs  consts.rs  lib.rs  main.rs  shell.rs  utils.rs
ev_site/src/routes/: contact.rs  disclosures.rs  home.rs  insights.rs  methodology.rs  mod.rs  page_not_found.rs  portfolio.rs  privacy.rs  strategy.rs  subscribe.rs  terms.rs  thesis.rs
ev_site_macros/: Cargo.toml
ev_site_macros/src/: lib.rs  parse.rs  tier.rs  validate.rs
ev_site_macros/tests/: compile_fail.rs  trybuild.rs
ev_site_macros/tests/compile_fail/: equal_to_parent.rs  equal_to_parent.stderr  lesser_than_parent.rs  lesser_than_parent.stderr  missing_root_tier.rs  missing_root_tier.stderr  multiple_violations.rs  multiple_violations.stderr  non_ident_tier.rs  non_ident_tier.stderr  unknown_tier.rs  unknown_tier.stderr
ev_site_macros/tests/fail/: equal_to_parent.rs  equal_to_parent.stderr  lesser_than_parent.rs  lesser_than_parent.stderr  missing_root_tier.rs  missing_root_tier.stderr  multiple_violations.rs  multiple_violations.stderr  non_ident_tier.rs  non_ident_tier.stderr  unknown_tier.rs  unknown_tier.stderr
ev_site_manus/: .tailwind.entry.css  Cargo.toml  Dioxus.toml  build.rs  styles.css  tailwind.css
ev_site_manus/assets/: tailwind.css  tailwind.generated.css
ev_site_manus/src/: components.rs  icons.rs  lib.rs  main.rs  styles.rs
ev_site_manus/src/pages/: home.rs  not_found.rs
examples/: config.nix
examples/colorscheme/: explore.py  explore.rs  run.sh  vietnam_site_original.md
frontend/: .env.example  .gitignore  PRODUCT.md  components.json  eslint.config.mjs  instrumentation.ts  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  template.json  vite.config.ts
frontend/app/: layout.tsx
frontend/application/: providers.tsx
frontend/application/layout/: footer.tsx  header.tsx
frontend/application/styles/: globals.css
frontend/client/src/: App.tsx  index.css
frontend/entities/blog/: index.ts
frontend/features/ab-variant/: dev-ab-panel.tsx  experiment-tracker.tsx  index.ts  section-slot.tsx
frontend/shared/lib/: section.ts  utils.ts
frontend/shared/ui/: error-boundary.tsx  logo.tsx  text.tsx
frontend/src/application/: fonts.ts  metadata.ts
frontend/tests/: sections.spec.ts
landing/: .env.example  .prettierignore  README.md  eslint.config.mjs  package-lock.json  package.json
landing/application/: providers.tsx
landing/application/layout/: header.tsx
landing/application/styles/: globals.css
landing/features/error-monitoring/: index.ts
landing/shared/lib/: utils.ts
log/: colorscheme.md  learning.md
manus/: .project-config.json  README.md  ideas.md  package.json  template.json
manus/client/: index.html
manus/client/src/: index.css
manus_pretty_bad_but_has_cool_invest_estimate_panel/: ideas.md
manus_pretty_bad_but_has_cool_invest_estimate_panel/client/: index.html
manus_pretty_bad_but_has_cool_invest_estimate_panel/client/src/: App.tsx  index.css
manus_site_good_team_page/: README.md  assets_log.txt  ideas.md
manus_site_good_team_page/client/: index.html
manus_site_good_team_page/client/src/: App.tsx  index.css
manus_site_vietnam_colors/: components.json  ideas.md  template.json
manus_site_vietnam_colors/client/src/: App.tsx  index.css
manus_vietnam_site_bak/: package.json
manus_vietnam_site_bak/client/: index.html
pc/: Cargo.toml  Dioxus.toml  README.md
pc/assets/: tailwind.css
pc/src/: lib.rs  main.rs
pc/src/application/: layout.rs  router.rs
pc/src/shared/: mod.rs
pc/src/shared/ui/: badge.rs  button.rs  card.rs  input.rs  separator.rs  skeleton.rs  table.rs
pc/src/views/: dashboard.rs  investments.rs  mod.rs  not_found.rs
public/: tokens.css
public/colorschemes/: _fen_sent_outside_of_standard.nix  dark.nix  dark_vietnam.nix  final.nix  light.nix  main.nix  vietnam_colorful.nix
site/: Cargo.toml  build.rs
site/src/: config.rs  main.rs
site_soup/: vite.config.ts
site_soup/client/src/: index.css
site_tsx/client/: index.html
(+96 files in other folders)
