cargo-features = ["codegen-backend"]

[workspace]
members = ["backend", "domain", "pc"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
dioxus = { version = "0.7", features = ["web", "router"] }
domain = { path = "domain" }
dotenvy = "0.15.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
jiff = "0.2"
sentry = "0.48.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
sqlx = "0.9.0"
tailwind_fuse = "0.3"
thiserror = "2.0.18"
time = "0.3"
tokio = "1.52.3"
tower = "0.5.3"
tower-http = "0.6.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
utoipa = "5.5.0"
utoipa-swagger-ui = "9.0.2"
uuid = "1.23.2"

[workspace.lints.rust]
unused_features = "allow"
