[package]
name = "backend"
version = "0.1.0"
edition = "2024"
description = "Backend API for the EV Investment fund site"
license = "BlueOak-1.0.0"
publish = false
default-run = "backend"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
dotenvy = "0.15.7"
jiff = { version = "0.2", features = ["serde"] }
sentry = { version = "0.48.2", features = ["tower-axum-matched-path", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "migrate"] }
thiserror = "2.0.18"
time = "0.3"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
utoipa = { version = "5.5.0", features = ["uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }

domain.workspace = true
