[package]
name = "cabinet"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "cabinet"

# FSD layout mirrors `landing`: module folders live at the crate root, not under
# `src/`, so Cargo needs explicit paths to the lib and bin entry points.
[lib]
path = "lib.rs"

[[bin]]
name = "cabinet"
path = "main.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Layer the wasm/browser backends onto `ev` only for the wasm target.
ev = { git = "https://github.com/EV-invest/lib.git", rev = "4cb3b1abc5f9ff3b5db8494aa687a44d995ec9cc", default-features = false, features = ["uikit", "wasm"] }
getrandom.workspace = true
# Pinned to match the wasm-bindgen-cli that nixpkgs' dioxus-cli (`dx`) bundles.
# dx fails the build unless the `wasm-bindgen` crate and its CLI match exactly;
# bump this in lockstep whenever the pinned dioxus-cli changes its CLI version.
wasm-bindgen = "=0.2.118"

[dependencies]
ev = { git = "https://github.com/EV-invest/lib.git", rev = "4cb3b1abc5f9ff3b5db8494aa687a44d995ec9cc", default-features = false, features = ["uikit"] }

dioxus.workspace = true
domain.workspace = true
