[package]
name = "domain"
version = "0.1.0"
edition = "2024"
publish = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom.workspace = true
ev = { workspace = true, features = ["wasm"] }
uuid = { version = "1", features = ["js"] }

[dependencies]
ev.workspace = true
jiff = { workspace = true, features = ["serde"] }
serde.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
