[package]
name = "ev_site"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
derive-new.workspace = true
dioxus = { workspace = true, features = ["web", "router"] }
miette.workspace = true
serde.workspace = true
v_utils.workspace = true

[lints]
workspace = true
