[package]
name = "ev_site_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
ui_test.workspace = true

[[test]]
name = "compile_fail"
path = "tests/compile_fail.rs"
harness = false

[lints]
workspace = true
